--- a/index.html
+++ b/index.html
@@ -11,15 +11,27 @@
     <nav>
       <h2 class="name">Deepak</h2>
       <div class="menu">
-        <a href="" id="about" class="navLink">About</a>
-        <a href="" id="skills" class="navLink">Skills</a>
-        <a href="" id="project" class="navLink">Projects</a>
-        <a href="" id="contact" class="navLink">Contact Me</a>
+        <a href="#about" id="navabout" class="navLink">About</a>
+        <a href="#skills" id="navskills" class="navLink">Skills</a>
+        <a href="#project" id="navproject" class="navLink">Projects</a>
+        <a href="#contact" id="navcontact" class="navLink">Contact Me</a>
       </div>
     </nav>
-    <section id="intro">asdf</section>
+    <section id="intro">
+      <h2>Hi, 👋</h2>
+      <h3>Im Deepak Jain</h3>
+
+      <div id="introanim1" class="introanim">
+        <div class="frontface">Web Developer</div>
+        <div class="backface">Competitive Programmer</div>
+      </div>
+      <div id="introanim2" class="introanim">
+        <div class="frontface">Tech lover</div>
+        <div class="backface">Lorem, ipsum dolor.</div>
+      </div>
+    </section>
     <section id="about">lkjh</section>
-    <section id="skills">kjlh</section>
+    <section id="skills"><h1>HEIEIEIE</h1></section>
     <section id="project">lkjh</section>
     <section id="contact">kljh</section>
     <section id="foot">lkjh</section>
