--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
          I am a student pursuing BTech in Computer Science field  at Ghaziabad(U.P.)  intersted and passionately practicing Web Development and Designing and Competitive Programming.
          <br><br>
          Solving problems with a collaborative, creative and a optimized approach is what I love to do.
+         I am currently a trainee in Blockchain Research Lab and also a member of Programming Club,AKGEC.
          
 
           
